PYIC-5829: Addressed review comments